--- a/07-redux/crud-redux/package.json
+++ b/07-redux/crud-redux/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.2",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "6.3"
